Fix stretched background a bit

--- a/views/application.sass
+++ b/views/application.sass
@@ -17,10 +17,10 @@ ul
 #background
   background: url("/images/bg.jpg") no-repeat center center
   background-size: cover
-  position: absolute
+  position: fixed
   width: 100%
   height: 100%
-  z-index: 1
+  z-index: -1
 
 .container
   position: relative
